# Droplets_2D

./: CMakeLists.txt  README.md
example_configs/: Test_on_spiral.ini  create_spiral.ini  sustained_spiral_wave.ini  sustained_spiral_wave_mesh_aware.ini  sustained_spiral_wave_mesh_aware_gross.ini
outputs/chemical_reactions/: clean_files.sh
outputs/chemical_reactions_steady_state/: FHN_DM.gnuplot
src/: main.cpp
src/ini_parser/: ini_file_sections.h
src/ode_solver/: ode_solver.cpp  ode_solver.h
src/options/: user_options.cpp  user_options.h
src/pde_solver/: CMakeLists.txt  pde_solver.cpp  pde_solver.h
src/solver/: CMakeLists.txt  droplets_solver.cpp  droplets_solver.h  ode_solver  ode_solver.cpp  ode_solver.h  pde_solver.cpp  pde_solver.h
src/utils/: utils.cpp  utils.h
